# alignment-comparison-plots

./: .gitignore  404.html  LICENSE  Makefile  README.md  README_PYPI.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docs.yml
api/phoneme_counts/: index.html
api/phoneme_overlap/: index.html
api/phoneme_overlap_rate/: index.html
api/phoneme_pair_scatter/: index.html
api/shared/: index.html
devops/ci-cd/: index.html
devops/contributing/: index.html
docs/: index.md
docs/api/: phoneme_counts.md  phoneme_overlap.md  phoneme_overlap_rate.md  phoneme_pair_scatter.md  shared.md
docs/devops/: ci-cd.md  contributing.md
notebooks/: examples.ipynb
search/: search_index.json
src/alignment_comparison_plots/: __init__.py  _types.py  phoneme_counts.py  phoneme_overlap.py
tests/: test_protocol.py
