[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alignment-comparison-plots"
version = "0.1.0"
description = "Qt-based forced-alignment comparision plot utils for Praat TextGrid corpora."
readme = "README_PYPI.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "praat-textgrids>=1.4.0",
    "pyqt6>=6.10.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alignment_comparison_plots"]

[tool.mypy]
python_version = "3.11"
disable_error_code = ["import-untyped"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.5",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
